crates/a2s/tests/snapshots/snapshot_test__0__172_111_51_213_2302_players.snap
---
source: crates/a2s/tests/snapshot_test.rs
expression: players
---
[
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 9296.237,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 9274.167,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 9252.489,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 9238.731,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 9231.326,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 9224.599,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 9212.124,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 9196.471,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 9183.229,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 9153.248,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 9138.531,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 9130.56,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 6612.947,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 6297.0454,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 5697.868,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 5683.7876,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 5678.842,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 4044.2756,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 3297.9346,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 3190.0024,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 3042.3645,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 2985.8013,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 2875.7092,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 2810.5613,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 2286.3635,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 2211.2043,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 2132.033,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 1764.7832,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 1684.7201,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 1626.5446,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 1569.4247,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 1193.4833,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 1182.9308,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 1179.6492,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 742.449,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 639.3183,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 494.57672,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 228.1209,
        the_ship: None,
    },
]
