crates/a2s/tests/snapshots/snapshot_test__0__172_111_51_213_2402_players.snap
---
source: crates/a2s/tests/snapshot_test.rs
expression: players
---
[
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 8995.9795,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 8974.843,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 8973.034,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 8953.061,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 8950.639,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 8948.934,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 8861.568,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 7584.5884,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 6350.8706,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 5551.247,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 4902.8335,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 4883.71,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 4692.7886,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 4675.238,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 4203.5864,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 4158.0815,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 3337.152,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 2743.8984,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 2533.8467,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 2372.761,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 2259.0635,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 2089.6736,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 1765.4396,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 1589.7335,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 1442.2267,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 1432.406,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 1267.1317,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 1239.5789,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 1223.1116,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 1221.858,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 1220.741,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 667.2541,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 630.7205,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 533.3811,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 295.48648,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 268.7849,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 113.34384,
        the_ship: None,
    },
    Player {
        index: 0,
        name: "",
        score: 0,
        duration: 40.858284,
        the_ship: None,
    },
]
