crates/a2s/tests/snapshots/snapshot_test__0__172_111_51_213_2402_rules.snap
---
source: crates/a2s/tests/snapshot_test.rs
expression: rules
---
[
    Rule {
        name: "\x01\x03",
        value: "\x02\x01\x02\x01\x02\x01\x02\x07\xfc\xecIm\x04\x01\x02\x08\'k\x12WindstrideClothing7\xd0S\x9d\x04\x8e\x8d\xbd\x7f\x16Advanced Weapon Scopese\xe7\xe3\xb7\x04\xf0gv\x88\x10Namalsk Survival\xe5\x04y\xa1\x04ITv\x88\x0eNamalsk Islandj\xe7\xe3\x19\x04\xc3\x0c\xcb",
    },
    Rule {
        name: "\x02\x03",
        value: "}\x06DayOne\xd0\xf1\x19\xb4\x04\x90\'9]\x16Community Online Tools\xc1Ưh\x04\x04\xb0\xef\\\x13Community Framework\x08\x0bcftoolsRoot\x04dayz\x06Inkota\x0eJacob_Mango_V3\nliquidrock\tMandib",
    },
    Rule {
        name: "\x03\x03",
        value: "ull\x06sumrak\x0cWindstrideV2BNamalsk using Sumrak\'s Hardcore mission. https://discord.gg/dayone",
    },
    Rule {
        name: "allowedBuild",
        value: "0",
    },
    Rule {
        name: "clientPort",
        value: "0",
    },
    Rule {
        name: "dedicated",
        value: "1",
    },
    Rule {
        name: "island",
        value: "namalsk",
    },
    Rule {
        name: "language",
        value: "65545",
    },
    Rule {
        name: "platform",
        value: "win",
    },
    Rule {
        name: "requiredBuild",
        value: "0",
    },
    Rule {
        name: "requiredVersion",
        value: "128",
    },
    Rule {
        name: "timeLeft",
        value: "15",
    },
]
