crates/a2s/tests/snapshots/snapshot_test__0__172_111_51_218_2302_info_roundtrip.snap
---
source: crates/a2s/tests/snapshot_test.rs
expression: reparsed
---
Info {
    protocol: 17,
    name: "DayOne Livonia 1PP (No Bases|Adventure)",
    map: "enoch",
    folder: "dayz",
    game: "Vanilla-ish with no base building. Have an adventure! https://d",
    app_id: AppId(
        0,
    ),
    players: 11,
    max_players: 70,
    bots: 0,
    server_type: Dedicated,
    server_os: Windows,
    visibility: false,
    vac: true,
    the_ship: None,
    version: "1.28.161464",
    edf: 177,
    extended_server_info: ExtendedServerInfo {
        port: Some(
            2302,
        ),
        steam_id: Some(
            SteamId(
                90282752995787789,
            ),
        ),
        keywords: Some(
            "battleye,no3rd,external,privHive,shard111,lqs0,etm4.000000,entm2.000000,mod,11:46",
        ),
        game_id: Some(
            GameId(
                221100,
            ),
        ),
    },
    source_tv: None,
}
